Make the README lean and 7.0.0-only
627 -> 191 lines. Keeps: quick start, the pitfalls that actually break a run,
SDK profiles, the demo table (now in numeric order), a headline-results table
with evidence paths, CUDA equivalents, upstream issues, docs and layout.

Removes every 6.x.x reference: the historical 6.0.0 results, the 6.0.0 vs
7.0.0 comparison columns, both migration sections, the sdkman-6.0.0 profile row
and the 6.0.0-era CUDA comparison. That material stays in results/raw/,
STATE.md and the git history.

Also drops two things that were wrong: the claim that setup-env.sh only works
from the repo root, and a check count of 48 that should have been 69. The
CUDA 13 note no longer lists 12, 17 and 18 only; demo 22 uses CUTLASS too.